# Gstreamer-Learning

./: .gitignore  GSt_Note_en.md  README.md  README_tr.md
00.first_code/: main.py
01.basic_tutorial/: basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-5.c  basic-tutorial-6.c  basic-tutorial-7.c
01.basic_tutorial_1/: basic-tutorial-1.c
02.media_player/: CMakeLists.txt  README.md  README_tr.md
02.media_player/include/: MediaPlayer.hpp  Utils.hpp
02.media_player/src/: MediaPlayer.cpp  Utils.cpp  main.cpp
03.video_converter/: CMakeLists.txt  README.md  build.sh  main.cpp  note.txt
03.video_converter/src/: main.cpp
04.Optical_flow_with_GST/: CMakeLists.txt  OpticalFlowDetector.cpp  README.md  README_tr.md
04.Optical_flow_with_GST/include/: OpticalFlowDetector.hpp  Utils.hpp
04.Optical_flow_with_GST/src/: OpticalFlowDetector.cpp  Utils.cpp  main.cpp
05.RTSP_server_client/: CMakeLists.txt  README.md  README_tr.md  rtsp_cam_client.cpp  rtsp_cam_server.cpp
06.Gstreamer_DeepDetect_Plugin_Project/: CMakeLists.txt  README.md  meson.build
06.Gstreamer_DeepDetect_Plugin_Project/docs/: DESIGN.md  PROJECT_SUMMARY.md
06.Gstreamer_DeepDetect_Plugin_Project/include/: gstdeepdetect.h
06.Gstreamer_DeepDetect_Plugin_Project/samples/: calibration_tool.cpp  launch.sh
06.Gstreamer_DeepDetect_Plugin_Project/scripts/: build_yolov8_engine.py  install_dependecies.sh
06.Gstreamer_DeepDetect_Plugin_Project/src/: gstdeepdetect.cc  nvoverlay.cc  nvoverlay.hh  yolo_engine.cc  yolo_engine.hh
06.Gstreamer_DeepDetect_Plugin_Project/tests/: CMakeLists.txt  golden_meta.json  integration_tests.sh.in  performence_test.sh  test_synthetic.cpp
07.GStreamer_Video_Analytics_Pipeline/: CMakeLists.txt  README.md  README_tr.md  project.txt
07.GStreamer_Video_Analytics_Pipeline/config/: pipeline_config.yaml
07.GStreamer_Video_Analytics_Pipeline/include/: motion_detector.h  pipeline_manager.h  rtsp_streamer.h  video_processor.h
07.GStreamer_Video_Analytics_Pipeline/scripts/: build.sh  run_tests.sh
07.GStreamer_Video_Analytics_Pipeline/src/: main.cpp  motion_detector.cpp  pipeline_manager.cpp  rtsp_streamer.cpp  video_processor.cpp
08.video_mosaic_creator/: CMakeLists.txt  README.md  README_tr.md
08.video_mosaic_creator/config/: mosaic_config.yaml
08.video_mosaic_creator/include/: input_manager.h  mosaic_layout.h  video_mosaic.h
08.video_mosaic_creator/src/: input_manager.cpp  main.cpp  mosaic_layout.cpp  video_mosaic.cpp
09.video_frame_extractor/: CMakeLists.txt  README.md
09.video_frame_extractor/config/: config.yaml
09.video_frame_extractor/include/: frame_extractor.h
09.video_frame_extractor/src/: frame_extractor.cpp  main.cpp
10.stereo_depth_pipeline/: CMakeLists.txt  README.md
10.stereo_depth_pipeline/include/: depth_estimator.h  obstacle_detector.h  stereo_pipeline.h
10.stereo_depth_pipeline/src/: depth_estimator.cpp  main.cpp  obstacle_detector.cpp  stereo_pipeline.cpp
11.jetson_edge_pipeline/: CMakeLists.txt  README.md  README_tr.md
11.jetson_edge_pipeline/config/: cameras.yaml  orin_nano_profiles.yaml  pipeline.yaml
11.jetson_edge_pipeline/docker/: Dockerfile.dev  Dockerfile.l4t  docker-compose.yml
11.jetson_edge_pipeline/docs/: BYTETRACK_DESIGN.md  CAMERA_TYPES.md  DEPLOYMENT.md  ORIN_NANO_SPECS.md  SIMULATION_METHOD.md
11.jetson_edge_pipeline/include/: edge_pipeline.h
11.jetson_edge_pipeline/include/camera/: camera_factory.h  csi_camera.h  gige_camera.h  gmsl_camera.h  i_camera.h  usb_camera.h
11.jetson_edge_pipeline/include/inference/: int8_calibrator.h  tensorrt_engine.h
11.jetson_edge_pipeline/include/monitoring/: orin_simulator.h  perf_logger.h  tegrastats_parser.h
11.jetson_edge_pipeline/include/tracking/: byte_tracker.h  hungarian.h  kalman_filter.h
11.jetson_edge_pipeline/scripts/: benchmark.sh  build_int8_engine.py  compare_x86_vs_jetson.py  cross_compile.sh  deploy_to_jetson.sh  setup_dev_env.sh  simulate_orin_nano.py
11.jetson_edge_pipeline/src/: edge_pipeline.cpp  main.cpp
11.jetson_edge_pipeline/src/camera/: camera_factory.cpp  csi_camera.cpp  gige_camera.cpp  gmsl_camera.cpp  usb_camera.cpp
11.jetson_edge_pipeline/src/inference/: int8_calibrator.cpp  tensorrt_engine.cpp
11.jetson_edge_pipeline/src/monitoring/: orin_simulator.cpp  perf_logger.cpp  tegrastats_parser.cpp
11.jetson_edge_pipeline/src/tracking/: byte_tracker.cpp  hungarian.cpp  kalman_filter.cpp
11.jetson_edge_pipeline/tests/: CMakeLists.txt  test_byte_tracker.cpp  test_camera_factory.cpp  test_hungarian.cpp  test_kalman.cpp  test_orin_simulator.cpp
